--- a/vuedemo/manager-demo/index.html
+++ b/vuedemo/manager-demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>后台系统</title>
+    <title>managerdemo</title>
   </head>
   <body>
     <div id="app"></div>
